# SME0130

./: mypy.ini  pyproject.toml  ruff.toml
data/chosen/19971108/: gprops.csv  nodes.csv
data/chosen/DialtelecomCz/: edges.csv  gprops.csv  nodes.csv
data/chosen/contact/: edges.csv  gprops.csv  nodes.csv
data/chosen/male_chemical/: edges.csv  gprops.csv  nodes.csv
notebooks/: questionario-04.ipynb  questionario-05.ipynb  questionario-06.ipynb  questionario-07.ipynb
src/redes_complexas/: __init__.py
